# photosort

./: .containerignore  .gitignore  .pylintrc  .stestr.conf  CLAUDE.md  CONTAINER.md  Containerfile  DOCKER_COMPOSE.md  Makefile  README.md  config.py  config.yml  distribute.sh  docker-compose-examples.yaml  docker-compose.prod.yaml  docker-compose.yaml  media.py  my_photosort.yaml  photo.py  photodb.py  photosort.py  pyproject.toml  requirements.txt  requires.txt  setup.py  test-requirements.txt  tox.ini  walk.py
.beads/: issues.jsonl
.github/workflows/: container-build.yml  test.yaml
etc/: config.yml  photosort.yml
photosort/: config.py  exceptions.py  exif.py  media.py  photo.py  photodb.py  photosort.py  version.py  walk.py
photosort/test/: __init__.py  test.py
photosort/test/data/media2/: BigBuckBunny.avi
photosort/test/testcases/: test_000_qa_works.py  test_001_walk_for_media.py  test_002_exif_media.py  test_002_photo_media.py  test_003_movie_media.py  test_003_noexif_media.py
src/photosort/: config.py  exif.py  media.py  photodb.py  photosort.py  walk.py  yolo_tagger.py
src/photosort/test/: __init__.py
src/photosort/test/data/coco/: 20250926220424_IMG_4861.HEIC  README.md
src/photosort/test/testcases/: __init__.py  test_001_walk_for_media.py  test_002_exif_media.py  test_004_config.py  test_005_photodb.py  test_006_photosort_integration.py  test_007_error_handling.py  test_007_yolo_tagger.py  test_008_monitor.py  test_008_yolo_integration.py
tools/: coding-checks.sh
