[project]
name = "photosort"
authors = [{name="Miguel Angel Ajo Pelayo", email = "miguelangel@ajo.es"}]
version = "2024.1.0"
description = "Picture inbox simplified"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyaml>=24.7.0",
    "pyexiftool>=0.5.6",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "pillow-heif>=0.16.0",
    "pi-heif>=0.20.0",
]

[project.scripts]
photosort = "photosort.photosort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=6.0.0",
    "mock>=5.1.0",
    "setuptools>=73.0.1",
    "twine>=5.1.1",
    "build>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["src/photosort/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/photosort"]
omit = [
    "*/test/*",
    "*/test.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.coverage.html]
directory = "htmlcov"
